# UnleashedRecomp-Android12

./: .gitattributes  .gitignore  .replit  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  build.bat  build_android_configure.bat  build_android_target.bat  build_android_target_ndk.bat  build_apk.bat  build_debug.bat  build_host_tools.bat  build_host_tools_target.bat  build_hosttools_substitution_target.bat  build_hosttools_substitution_test.bat  build_target.bat  local.properties  replit.md  replit.nix
.agents/memory/: MEMORY.md  unleashedrecomp-android.md
.cache/nix/: binary-cache-v7.sqlite
.cache/replit/: toolchain.json
.cache/replit/env/: latest  latest.json
.cache/replit/modules/: java-graalvm22.3
.cache/replit/nix/: env.json
.config/gh/: hosts.yml
.github/workflows/: android.yml
.local/skills/artifacts/: .fingerprint
.local/skills/testing/: .fingerprint
.local/state/scribe/: scribe.db-shm  scribe.db-wal
UnleashedRecomp/: CMakeLists.txt  app.cpp  app.h  main.cpp  version.cpp
UnleashedRecomp/api/: README.md  SWA.h  SWA.py
UnleashedRecomp/apu/driver/: sdl2_driver.cpp
UnleashedRecomp/gpu/: video.cpp  video.h
UnleashedRecomp/gpu/shader/: blend_color_alpha_ps.hlsl.dxil.h  blend_color_alpha_ps.hlsl.spirv.h  copy_color_ps.hlsl.dxil.h  copy_color_ps.hlsl.spirv.h  copy_depth_ps.hlsl.dxil.h  copy_depth_ps.hlsl.spirv.h  copy_vs.hlsl.dxil.h  copy_vs.hlsl.spirv.h  csd_filter_ps.hlsl.dxil.h  csd_filter_ps.hlsl.spirv.h  csd_no_tex_vs.hlsl.dxil.h  csd_no_tex_vs.hlsl.spirv.h  csd_vs.hlsl.dxil.h  csd_vs.hlsl.spirv.h  enhanced_motion_blur_ps.hlsl.dxil.h  enhanced_motion_blur_ps.hlsl.spirv.h  gamma_correction_ps.hlsl.dxil.h  gamma_correction_ps.hlsl.spirv.h  gaussian_blur_3x3.hlsl.dxil.h  gaussian_blur_3x3.hlsl.spirv.h  gaussian_blur_5x5.hlsl.dxil.h  gaussian_blur_5x5.hlsl.spirv.h  gaussian_blur_7x7.hlsl.dxil.h  gaussian_blur_7x7.hlsl.spirv.h  gaussian_blur_9x9.hlsl.dxil.h  gaussian_blur_9x9.hlsl.spirv.h  imgui_ps.hlsl.dxil.h  imgui_ps.hlsl.spirv.h  imgui_vs.hlsl.dxil.h  imgui_vs.hlsl.spirv.h  movie_ps.hlsl.dxil.h  movie_ps.hlsl.spirv.h  movie_vs.hlsl.dxil.h  movie_vs.hlsl.spirv.h  resolve_msaa_color_2x.hlsl.dxil.h  resolve_msaa_color_2x.hlsl.spirv.h  resolve_msaa_color_4x.hlsl.dxil.h  resolve_msaa_color_4x.hlsl.spirv.h  resolve_msaa_color_8x.hlsl.dxil.h  resolve_msaa_color_8x.hlsl.spirv.h  (+6 more)
UnleashedRecomp/hid/driver/: sdl_hid.cpp
UnleashedRecomp/kernel/: memory.cpp  xam.cpp
UnleashedRecomp/locale/: config_locale.cpp
UnleashedRecomp/mod/: mod_loader.cpp
UnleashedRecomp/os/: logger.h
UnleashedRecomp/os/android/: logger_android.cpp  media_android.cpp  process_android.cpp  storage_android.cpp  storage_android.h  version_android.cpp  vulkan_driver_android.cpp  vulkan_driver_android.h
UnleashedRecomp/os/linux/: logger_linux.cpp
UnleashedRecomp/os/win32/: logger_win32.cpp
UnleashedRecomp/patches/: CGameModeStageTitle_patches.cpp  CHudPause_patches.cpp  aspect_ratio_patches.cpp  camera_patches.cpp  first_person_patches.cpp  first_person_patches.h  fps_patches.cpp  inspire_patches.cpp  misc_patches.cpp  video_patches.cpp
UnleashedRecomp/res/: credits.h
UnleashedRecomp/res/bc_diff/: button_bc_diff.bin.c  button_bc_diff.bin.h
UnleashedRecomp/res/font/: im_font_atlas.bin.c  im_font_atlas.bin.h  im_font_atlas.dds.h
UnleashedRecomp/res/images/: game_icon.bmp.c  game_icon.bmp.h  game_icon_night.bmp.c  game_icon_night.bmp.h
UnleashedRecomp/res/images/achievements_menu/: trophy.dds.c  trophy.dds.h
UnleashedRecomp/res/music/: installer.ogg.h
UnleashedRecomp/res/sounds/: sys_actstg_pausecansel.ogg.c  sys_actstg_pausecansel.ogg.h  sys_actstg_pausecursor.ogg.c  sys_actstg_pausecursor.ogg.h  sys_actstg_pausedecide.ogg.c  sys_actstg_pausedecide.ogg.h  sys_actstg_pausewinclose.ogg.c  sys_actstg_pausewinclose.ogg.h  sys_actstg_pausewinopen.ogg.c  sys_actstg_pausewinopen.ogg.h  sys_worldmap_cursor.ogg.c  sys_worldmap_cursor.ogg.h  sys_worldmap_finaldecide.ogg.c  sys_worldmap_finaldecide.ogg.h
UnleashedRecomp/ui/: achievement_overlay.cpp  button_guide.h  game_window.cpp  game_window.h  options_menu.cpp  touch_controls.cpp  touch_controls.h
UnleashedRecomp/user/: config.cpp  config.h  config_def.h  paths.cpp  paths.h
UnleashedRecompLib/: CMakeLists.txt
UnleashedRecompLib/config/: SWA.toml
UnleashedRecompLib/ppc/: ppc_config.h  ppc_context.h  ppc_detail.h  ppc_func_mapping.cpp  ppc_recomp.0.cpp  ppc_recomp.1.cpp  ppc_recomp.10.cpp  ppc_recomp.100.cpp  ppc_recomp.101.cpp  ppc_recomp.102.cpp  ppc_recomp.103.cpp  ppc_recomp.104.cpp  ppc_recomp.105.cpp  ppc_recomp.106.cpp  ppc_recomp.107.cpp  ppc_recomp.108.cpp  ppc_recomp.109.cpp  ppc_recomp.11.cpp  ppc_recomp.110.cpp  ppc_recomp.111.cpp  ppc_recomp.112.cpp  ppc_recomp.113.cpp  ppc_recomp.114.cpp  ppc_recomp.115.cpp  ppc_recomp.116.cpp  ppc_recomp.117.cpp  ppc_recomp.118.cpp  ppc_recomp.119.cpp  ppc_recomp.12.cpp  ppc_recomp.120.cpp  ppc_recomp.121.cpp  ppc_recomp.122.cpp  ppc_recomp.123.cpp  ppc_recomp.124.cpp  ppc_recomp.125.cpp  ppc_recomp.126.cpp  ppc_recomp.127.cpp  ppc_recomp.128.cpp  ppc_recomp.129.cpp  ppc_recomp.13.cpp  (+226 more)
UnleashedRecompLib/private/: PLACE_GAME_FILES_HERE.txt  default.xexp  shader.ar
UnleashedRecompResources/images/options_menu/: miles_electric.dds  options_static.dds  options_static_flash.dds
android-apk/app/: build.gradle
android-apk/app/jni/: Application.mk
docs/: CI.md  GRAPHICS_DRIVERS.md
driver/: README.md
flatpak/: io.github.hedge_dev.unleashedrecomp.json
tools/XenonRecomp/XenonRecomp/: recompiler.cpp
tools/XenonRecomp/XenonUtils/: xbox.h  xdbf.h  xex_patcher.cpp
tools/XenosRecomp/XenosRecomp/: shader_recompiler.cpp
turnip-driver-ci/: bisect_turnip.sh  turnip_builder.sh
turnip-driver-ci/.github/workflows/: build.yml
turnip-driver-ci/patches-unleashed/: 0001-wfm-per-draw.patch  0002-a750-disable-generic-clear.patch  0003-a750-disable-gmem-vpc-attr-buf.patch  0004-a732-bringup-ids.patch  0005-wfm-smart-dirty.patch  0006-wfm-smart-dirty-noconsts.patch  0007-wfm-smart3.patch  0008-a710-720-722-entries.patch  0009-a710-720-722-entries-26_1.patch
(+239 files in other folders)
